--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "node-forge": "^0.7.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.10",
+    "@types/node-forge": "^0.7.9",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint-plugin-typescript": "^0.14.0",
