--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "asn1.js": "^5.0.1",
     "crc-32": "^1.2.0",
     "multipipe": "^2.0.3",
     "node-forge": "^0.7.6"
@@ -30,12 +31,14 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/jsbn": "^1.2.29",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.10",
     "@types/node-forge": "^0.7.9",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint-plugin-typescript": "^0.14.0",
+    "jsbn": "^1.1.0",
     "memorystream": "^0.3.1",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
