--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,17 @@
 {
   "compilerOptions": {
     "outDir": "./lib",
-    "target": "es5",
+    "target": "es6",
+    "module": "CommonJS",
     "esModuleInterop": true,
     "lib": [
       "es2017"
     ],
-    "declaration": true
+    "declaration": true,
+    "experimentalDecorators": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "sourceMap": true
   },
   "include": [
     "./src/**/*"
