--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "nyc": "^13.1.0",
     "source-map-support": "^0.5.10",
     "standard": "^12.0.1",
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-markdown": "^1.1.25",
     "typescript": "^3.2.4",
     "typescript-eslint-parser": "^22.0.0"
   }
