--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Super Simple Cryptography",
   "main": "index.js",
   "scripts": {
-    "lint": "standard 'src/**/*.js' 'src/**/*.ts'",
+    "lint": "eslint --ext .js,.ts src",
     "pretest": "npm run lint && npm run build",
     "test": "mocha --require source-map-support/register --timeout 30000 $(find tests -name '*.spec.js')",
     "prebuild": "rm -rf ./forge ./node ./utils ./tests index.js index.d.ts",
@@ -18,12 +18,6 @@
   },
   "author": "Seald SAS",
   "license": "MIT",
-  "standard": {
-    "parser": "typescript-eslint-parser",
-    "plugins": [
-      "typescript"
-    ]
-  },
   "dependencies": {
     "asn1.js": "^5.0.1",
     "crc-32": "^1.2.0"
@@ -38,18 +32,21 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.9.4",
     "@types/node-forge": "^0.7.11",
+    "@typescript-eslint/eslint-plugin": "^1.4.0",
+    "@typescript-eslint/parser": "^1.4.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-standard": "^4.0.0",
     "jsbn": "^1.1.0",
-    "mocha": "^6.0.0",
+    "mocha": "^6.0.1",
     "node-forge": "^0.8.0",
     "nyc": "^13.3.0",
     "source-map-support": "^0.5.10",
     "standard": "^12.0.1",
     "typedoc": "^0.14.2",
     "typedoc-plugin-markdown": "^1.1.26",
-    "typescript": "^3.3.3",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript": "^3.3.3333"
   }
 }
