--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "eslint --ext .js,.ts src",
     "pretest": "npm run lint && npm run build",
     "test": "mocha --require source-map-support/register --timeout 30000 $(find tests -name '*.spec.js')",
+    "pretest-browser": "npm run pretest && webpack --progress --hide-modules --display-error-details",
+    "test-browser": "xvfb-maybe karma start karma.conf.local.js",
     "prebuild": "rm -rf ./forge ./node ./utils ./tests index.js index.d.ts",
     "build": "tsc",
     "coverage": "nyc npm test",
@@ -26,27 +28,40 @@
     "node-forge": "^0.9.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.2",
+    "@types/chai": "^4.2.3",
     "@types/chai-as-promised": "^7.1.2",
     "@types/jsbn": "^1.2.29",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
     "@types/node-forge": "^0.8.6",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@types/pump": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.3.0",
+    "eslint": "^6.4.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-standard": "^4.0.1",
     "jsbn": "^1.1.0",
+    "karma": "^4.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^1.2.0",
+    "karma-fixture": "^0.2.6",
+    "karma-mocha": "^1.3.0",
+    "karma-sauce-launcher": "^2.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
     "mocha": "^6.2.0",
     "node-forge": "^0.9.0",
     "nyc": "^14.1.1",
+    "pump": "^3.0.0",
     "source-map-support": "^0.5.13",
-    "standard": "^14.2.0",
+    "standard": "^14.3.0",
     "typedoc": "^0.15.0",
-    "typedoc-plugin-markdown": "^2.1.12",
-    "typescript": "^3.6.3"
+    "typedoc-plugin-markdown": "^2.2.4",
+    "typescript": "^3.6.3",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "xvfb-maybe": "^0.2.1"
   }
 }
