--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts src",
     "pretest": "npm run lint && npm run build",
-    "test": "mocha --require source-map-support/register --timeout 30000 $(find tests -name '*.spec.js')",
+    "test": "mocha --require source-map-support/register --timeout 30000 tests/test-node.spec.js",
     "pretest-browser": "npm run pretest && webpack --progress --hide-modules --display-error-details",
     "test-browser": "xvfb-maybe karma start karma.conf.local.js",
     "prebuild": "rm -rf ./forge ./node ./utils ./tests index.js index.d.ts",
