--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "CommonJS",
     "esModuleInterop": true,
     "lib": [
-      "es2017"
+      "es2017",
+      "dom"
     ],
     "declaration": true,
     "experimentalDecorators": true,
