--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,29 @@
-before_script:
-  - npm install --silent
+cache:
+  key: "sscrypto" # universal cache
+  paths:
+    - .npm/
 
-test-node:
-  image: node:10
+before_script:
+  - npm ci --cache .npm --prefer-offline
+
+.test-node: &test-node
   stage: test
   script:
     - npm run coverage
   artifacts:
     name: "sscrypto_coverage_${CI_BUILD_ID}_${CI_BUILD_REF}"
     when: always
-    expire_in: 6 mos
+    expire_in: 1 mos
     paths:
     - coverage/
+
+test-node-10:
+  image: node:10
+  <<: *test-node
+
+test-node-12:
+  image: node:12
+  <<: *test-node
 
 test-browser:
   image: nexus-docker.tardis.seald.io/seald/docker-browser-testing:CHROME_76
