--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "license": "MIT",
   "dependencies": {
     "asn1.js": "^5.3.0",
-    "crc-32": "^1.2.0"
+    "crc-32": "^1.2.0",
+    "pumpify": "^2.0.1"
   },
   "peerDependencies": {
     "node-forge": "^0.9.1"
@@ -35,6 +36,7 @@
     "@types/node": "^13.11.1",
     "@types/node-forge": "^0.9.3",
     "@types/pump": "^1.1.0",
+    "@types/pumpify": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "chai": "^4.2.0",
