--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "asn1.js": "^5.3.0",
-    "crc-32": "^1.2.0",
-    "pumpify": "^2.0.1"
+    "crc-32": "^1.2.0"
   },
   "peerDependencies": {
     "node-forge": "^0.9.1"
