--- a/package.json
+++ b/package.json
@@ -51,11 +51,12 @@
     "karma-fixture": "^0.2.6",
     "karma-mocha": "^2.0.1",
     "karma-sauce-launcher": "^4.1.5",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-source-map-support": "^1.4.0",
     "mocha": "^7.2.0",
     "node-forge": "^0.9.1",
     "nyc": "^15.0.1",
     "pump": "^3.0.0",
+    "source-map-loader": "^1.0.0",
     "source-map-support": "^0.5.19",
     "standard": "^14.3.4",
     "typedoc": "^0.17.7",
