--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lint": "eslint --ext .js,.ts src",
     "pretest": "npm run lint && npm run build",
     "test": "mocha --require source-map-support/register --timeout 30000 tests/test-node.spec.js",
+    "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json --forbid-only",
     "pretest-browser": "npm run pretest && webpack --progress --hide-modules --display-error-details",
     "test-browser": "xvfb-maybe karma start karma.conf.local.js",
+    "pretest-saucelabs": "npm run pretest-browser",
+    "test-saucelabs": "karma start karma.conf.saucelabs.js",
     "prebuild": "rm -rf ./forge ./node ./utils ./tests index.js index.d.ts",
     "build": "tsc",
-    "coverage": "nyc npm test",
+    "coverage": "nyc npm run test-report",
     "doc": "typedoc --theme markdown --out doc"
   },
   "repository": {
@@ -49,10 +52,13 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-fixture": "^0.2.6",
+    "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-sauce-launcher": "^4.1.5",
     "karma-source-map-support": "^1.4.0",
     "mocha": "^7.2.0",
+    "mocha-junit-reporter": "^2.0.0",
+    "mocha-multi-reporters": "^1.1.7",
     "node-forge": "^0.9.1",
     "nyc": "^15.0.1",
     "pump": "^3.0.0",
