--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "npm run lint && npm run build",
     "test": "mocha --require source-map-support/register --timeout 30000 tests/test-node.spec.js",
     "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json --forbid-only",
-    "pretest-browser": "npm run pretest && webpack --progress --hide-modules --display-error-details",
+    "pretest-browser": "npm run pretest && webpack --progress --hide-modules --display-error-details --mode development",
     "test-browser": "xvfb-maybe karma start karma.conf.local.js",
     "pretest-saucelabs": "npm run pretest-browser",
     "test-saucelabs": "karma start karma.conf.saucelabs.js",
