--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-fixture": "^0.2.6",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
+    "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^4.1.5",
     "karma-source-map-support": "^1.4.0",
     "mocha": "^8.0.1",
