--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "node-forge": "^0.9.1",
     "nyc": "^15.1.0",
     "pump": "^3.0.0",
+    "sauce-connect-launcher": "^1.3.2",
     "source-map-loader": "^1.0.0",
     "source-map-support": "^0.5.19",
     "standard": "^14.3.4",
