Correct coverage & upload to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ before_script:
       - coverage/
     reports:
       junit: test-results/*.xml
+      cobertura: coverage/*/cobertura-coverage.xml
 
 test-node-10:
   image: node:10
@@ -35,6 +36,7 @@ test-browser:
   artifacts:
     reports:
       junit: test-results/*.xml
+      cobertura: coverage/*/cobertura-coverage.xml
 
 test-saucelabs:
   image: node:12
@@ -44,6 +46,7 @@ test-saucelabs:
   artifacts:
     reports:
       junit: test-results/*.xml
+      cobertura: coverage/*/cobertura-coverage.xml
   when: manual
 
 .deploy:
