--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .js,.ts src",
-    "pretest": "npm run lint && npm run build",
-    "test": "mocha --require source-map-support/register --timeout 30000 tests/test-node.spec.js",
-    "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json --forbid-only",
-    "pretest-browser": "npm run pretest && webpack --progress --hide-modules --display-error-details --mode development",
+    "pretest": "npm run lint",
+    "test": "mocha --require ts-node/register --require source-map-support/register --timeout 30000 src/tests/test-node.spec.ts",
+    "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json",
+    "pretest-browser": "npm run lint && npm run build && webpack --progress --hide-modules --display-error-details --mode development",
     "test-browser": "xvfb-maybe karma start karma.conf.local.js",
     "pretest-saucelabs": "npm run pretest-browser",
     "test-saucelabs": "mocha --require source-map-support/register run-karma-saucelabs.spec.js",
-    "prebuild": "rm -rf ./forge ./node ./utils ./tests index.js index.d.ts",
+    "prebuild": "rm -rf ./forge ./node ./utils ./tests ./webcrypto index.js index.d.ts",
+    "clean-reports": "rm -rf ./coverage ./.nyc_output ./test-results",
     "build": "tsc",
     "coverage": "nyc npm run test-report",
     "doc": "typedoc --theme markdown --out doc"
@@ -31,6 +32,7 @@
     "node-forge": "^0.9.1"
   },
   "devDependencies": {
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.3",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/jsbn": "^1.2.29",
@@ -50,6 +52,7 @@
     "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-firefox-launcher": "^1.3.0",
     "karma-fixture": "^0.2.6",
     "karma-junit-reporter": "^2.0.1",
@@ -67,6 +70,7 @@
     "source-map-loader": "^1.0.0",
     "source-map-support": "^0.5.19",
     "standard": "^14.3.4",
+    "ts-node": "^8.10.2",
     "typedoc": "^0.17.7",
     "typedoc-plugin-markdown": "^2.3.1",
     "typescript": "^3.9.5",
