--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .js,.ts src",
     "pretest": "npm run lint",
     "test": "mocha --require ts-node/register --require source-map-support/register --timeout 30000 src/tests/test-node.spec.ts",
-    "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json",
+    "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json --forbid-only",
     "pretest-browser": "npm run lint && npm run build && webpack --progress --hide-modules --display-error-details --mode development",
     "test-browser": "xvfb-maybe karma start karma.conf.local.js",
     "pretest-saucelabs": "npm run pretest-browser",
@@ -41,11 +41,11 @@
     "@types/node-forge": "^0.9.4",
     "@types/pump": "^1.1.0",
     "@types/pumpify": "^1.4.1",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.2.0",
+    "eslint": "^7.3.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-standard": "^4.0.1",
     "jsbn": "^1.1.0",
