--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "npm run lint",
     "test": "mocha --require ts-node/register --require source-map-support/register --timeout 30000 src/tests/test-node.spec.ts",
     "test-report": "npm run test -- --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json --forbid-only",
-    "pretest-browser": "npm run lint && npm run build && webpack --progress --hide-modules --display-error-details --mode development",
+    "pretest-browser": "npm run lint && npm run build && webpack --progress --mode development",
     "test-browser": "xvfb-maybe karma start karma.conf.local.js",
     "pretest-saucelabs": "npm run pretest-browser",
     "test-saucelabs": "mocha --require source-map-support/register run-karma-saucelabs.spec.js",
@@ -30,53 +30,55 @@
     "crc-32": "^1.2.0"
   },
   "peerDependencies": {
-    "node-forge": "^0.10.0"
+    "node-forge": "^1.2.0"
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
-    "@types/chai": "^4.2.12",
-    "@types/chai-as-promised": "^7.1.3",
-    "@types/jsbn": "^1.2.29",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.2",
-    "@types/node-forge": "^0.9.5",
-    "@types/pump": "^1.1.0",
+    "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.8",
+    "@types/node-forge": "^1.0.0",
+    "@types/pump": "^1.1.1",
     "@types/pumpify": "^1.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "chai": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "buffer": "^6.0.3",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.10.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jsbn": "^1.1.0",
-    "karma": "^5.2.3",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "karma": "^6.3.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-firefox-launcher": "^1.3.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-fixture": "^0.2.6",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-safari-launcher": "^1.0.0",
-    "karma-sauce-launcher": "^4.1.5",
+    "karma-sauce-launcher": "^4.3.6",
     "karma-source-map-support": "^1.4.0",
-    "mocha": "^8.1.3",
-    "mocha-junit-reporter": "^2.0.0",
-    "mocha-multi-reporters": "^1.1.7",
-    "node-forge": "^0.10.0",
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
+    "mocha-multi-reporters": "^1.5.1",
+    "node-forge": "^1.2.0",
     "nyc": "^15.1.0",
+    "process": "^0.11.10",
     "pump": "^3.0.0",
     "sauce-connect-launcher": "^1.3.2",
-    "source-map-loader": "^1.1.0",
-    "source-map-support": "^0.5.19",
-    "standard": "^14.3.4",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.2",
-    "typedoc-plugin-markdown": "^3.0.3",
-    "typescript": "3.8.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "source-map-loader": "^3.0.1",
+    "source-map-support": "^0.5.21",
+    "standard": "^16.0.4",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
+    "ts-node": "^10.4.0",
+    "typedoc": "^0.22.10",
+    "typedoc-plugin-markdown": "^3.11.11",
+    "typescript": "4.5.4",
+    "util": "^0.12.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "xvfb-maybe": "^0.2.1"
   }
 }
