--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
     "karma": "^6.3.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
