--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-promise": "^5.2.0",
     "karma": "^6.3.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
