--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
-    "@types/chai": "^4.3.0",
-    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.8",
     "@types/node-forge": "^1.0.0",
@@ -43,15 +41,13 @@
     "@types/pumpify": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "assert": "^2.0.0",
     "buffer": "^6.0.3",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-promise": "^5.2.0",
     "karma": "^6.3.10",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-firefox-launcher": "^2.1.2",
