--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,11 @@ before_script:
 test-node-10:
   image: node:10
   <<: *test-node
+  script:
+    # installing mocha@9, as mocha@10 is not compatible with node@10
+    - npm install mocha@9.2.2
+    # bypassing pretest : eslint is not compatible with node@10 anymore
+    - npx nyc npm run test-report mocha --require ts-node/register --require source-map-support/register --timeout 30000 src/tests/test-node.spec.ts --reporter mocha-multi-reporters --reporter-options configFile=./mochaReportConfig.json --forbid-only
 
 test-node-12:
   image: node:12
