--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sscrypto",
-  "version": "1.1.1-1",
+  "version": "1.1.1",
   "description": "Super Simple Cryptography",
   "main": "index.js",
   "scripts": {
