--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "asn1.js": "^5.4.1",
-    "crc-32": "^1.2.2",
-    "jsbn": "^1.1.0",
-    "react-native-modpow": "^1.1.0"
+    "crc-32": "^1.2.2"
   },
   "peerDependencies": {
     "node-forge": "^1.2.0"
@@ -72,6 +70,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react-native": "^0.68.2",
+    "react-native-modpow": "^1.1.0",
     "react-native-rsa-native": "^2.0.5",
     "react-native-url-polyfill": "^1.3.0",
     "sauce-connect-launcher": "^1.3.2",
