--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-forge": "^1.2.0"
   },
   "devDependencies": {
+    "@craftzdog/react-native-buffer": "^6.0.5",
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@types/jsbn": "^1.2.30",
     "@types/mocha": "^9.1.1",
