--- a/RnTestApp/package.json
+++ b/RnTestApp/package.json
@@ -19,7 +19,8 @@
     "react-native-modpow": "^1.1.0",
     "react-native-quick-base64": "^2.0.5",
     "react-native-quick-crypto": "^0.4.3",
-    "react-native-rsa-native": "^2.0.5"
+    "react-native-rsa-native": "^2.0.5",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
