--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src/**/*"
