--- a/RnTestApp/package.json
+++ b/RnTestApp/package.json
@@ -14,22 +14,21 @@
     "deca": "^0.1.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-cryptopp": "^0.2.0",
+    "react-native-cryptopp": "^0.3.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modpow": "^1.1.0",
     "react-native-quick-base64": "^2.0.5",
-    "react-native-quick-crypto": "^0.4.3",
-    "react-native-rsa-native": "^2.0.5",
-    "stream-browserify": "^3.0.0"
+    "react-native-quick-crypto": "^0.4.5",
+    "react-native-rsa-native": "^2.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "@babel/core": "^7.19.0",
+    "@babel/runtime": "^7.19.0",
+    "@react-native-community/eslint-config": "^3.1.0",
+    "babel-jest": "^29.0.2",
+    "eslint": "^8.23.0",
+    "jest": "^29.0.2",
+    "metro-react-native-babel-preset": "^0.72.2",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
