--- a/RnTestApp/package.json
+++ b/RnTestApp/package.json
@@ -26,6 +26,7 @@
     "@babel/runtime": "^7.19.0",
     "@react-native-community/eslint-config": "^3.1.0",
     "babel-jest": "^29.0.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.23.0",
     "jest": "^29.0.2",
     "metro-react-native-babel-preset": "^0.72.2",
