update ci tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,20 @@ test-node-16:
   image: node:16
   <<: *test-node
 
+test-node-18:
+  image: node:18
+  <<: *test-node
+
+test-node-20:
+  image: node:20
+  <<: *test-node
+
+test-node-22:
+  image: node:22
+  <<: *test-node
+
 test-browser:
-  image: nexus-docker.tardis.seald.io/seald/docker-browser-testing:CHROME_94
+  image: nexus-docker.tardis.seald.io/seald/docker-browser-testing:CHROME_128
   stage: test
   script:
     - npm run test-browser
@@ -70,7 +82,7 @@ test-saucelabs:
   when: manual
 
 deploy:
-  image: node:14
+  image: node:18
   stage: deploy
   script:
     - npm run prepublishOnly
